force-app/main/default/objects/Evidence__c/Evidence__c.object-meta.xml
<CustomObject>
    <description>This will track any evidence associated to a FIR case (except live animals)</description>
    <label>Evidence</label>
    <nameField>
        <label>Item #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evidence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>