force-app/main/default/objects/Evidence__c/fields/Abdominal_Cavity__c.field-meta.xml
<CustomField>
    <fullName>Abdominal_Cavity__c</fullName>
    <defaultValue>&quot;No fluid within the cavity, appropriate perirenal and mesenteric fat deposits, no overt organomegaly, peritoneal surface is smooth and shiny.&quot;</defaultValue>
    <label>Abdominal Cavity</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>