force-app/main/default/objects/Evidence__c/fields/Adrenals_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Adrenals_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adrenals Finalized</label>
    <type>Checkbox</type>
</CustomField>