force-app/main/default/objects/Evidence__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Species__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-4 weeks</fullName>
            </value>
            <value>
                <fullName>4-8 weeks</fullName>
            </value>
            <value>
                <fullName>8-12 weeks</fullName>
            </value>
            <value>
                <fullName>12-16 weeks</fullName>
            </value>
            <value>
                <fullName>4-6 months</fullName>
            </value>
            <value>
                <fullName>6 months - 2 years</fullName>
            </value>
            <value>
                <fullName>6 months - 1 year</fullName>
            </value>
            <value>
                <fullName>1 year - 2 years</fullName>
            </value>
            <value>
                <fullName>2-5 years</fullName>
            </value>
            <value>
                <fullName>5-7 years</fullName>
            </value>
            <value>
                <fullName>7-10 years</fullName>
            </value>
            <value>
                <fullName>greater than 10 yrs</fullName>
            </value>
            <value>
                <fullName>Hen &gt;1 yr</fullName>
            </value>
            <value>
                <fullName>Pullet &lt;1 yr</fullName>
            </value>
            <value>
                <fullName>Cockerel &lt;1 yr</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>