force-app/main/default/objects/Evidence__c/fields/Agency_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_Case_Number__c</fullName>
    <label>Agency Case Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>