force-app/main/default/objects/Evidence__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal ID</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Evidence</relationshipLabel>
    <relationshipName>Evidence</relationshipName>
    <type>Lookup</type>
</CustomField>