force-app/main/default/objects/Evidence__c/fields/Animal_ID__c.field-meta.xml
<CustomField>
    <fullName>Animal_ID__c</fullName>
    <label>Animal ID #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>