force-app/main/default/objects/Evidence__c/fields/Attendees_Assistants_Other__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Assistants_Other__c</fullName>
    <label>Attendees/Assistants - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>