force-app/main/default/objects/Evidence__c/fields/BCS__c.field-meta.xml
<CustomField>
    <fullName>BCS__c</fullName>
    <label>BCS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1/9 Emaciated</fullName>
            </value>
            <value>
                <fullName>2/9 Very Underweight</fullName>
            </value>
            <value>
                <fullName>3/9 Thin</fullName>
            </value>
            <value>
                <fullName>4/9 Lean</fullName>
            </value>
            <value>
                <fullName>5/9 Ideal</fullName>
            </value>
            <value>
                <fullName>6/9 Overweight</fullName>
            </value>
            <value>
                <fullName>7/9 Heavy</fullName>
            </value>
            <value>
                <fullName>8/9 Obese</fullName>
            </value>
            <value>
                <fullName>9/9 Grossly Obese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>