force-app/main/default/objects/Evidence__c/fields/Body_Condition__c.field-meta.xml
<CustomField>
    <fullName>Body_Condition__c</fullName>
    <label>Body Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>