force-app/main/default/objects/Evidence__c/fields/Bone__c.field-meta.xml
<CustomField>
    <fullName>Bone__c</fullName>
    <defaultValue>&quot;Long bones palpate symmetrical with no gross swelling or instability.&quot;</defaultValue>
    <label>Bone</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>