force-app/main/default/objects/Evidence__c/fields/Bone_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Bone_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bone Finalized</label>
    <type>Checkbox</type>
</CustomField>