force-app/main/default/objects/Evidence__c/fields/Brain__c.field-meta.xml
<CustomField>
    <fullName>Brain__c</fullName>
    <label>Brain</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>