force-app/main/default/objects/Evidence__c/fields/Dental_Disease_Description__c.field-meta.xml
<CustomField>
    <fullName>Dental_Disease_Description__c</fullName>
    <label>Dental Disease Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>