force-app/main/default/objects/Evidence__c/fields/Diaphragm__c.field-meta.xml
<CustomField>
    <fullName>Diaphragm__c</fullName>
    <defaultValue>&quot;Taught and concave in shape.&quot;</defaultValue>
    <label>Diaphragm</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>