force-app/main/default/objects/Evidence__c/fields/Diaphragm_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Diaphragm_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diaphragm Finalized</label>
    <type>Checkbox</type>
</CustomField>