force-app/main/default/objects/Evidence__c/fields/DISPO__c.field-meta.xml
<CustomField>
    <fullName>DISPO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DISPO</label>
    <type>Checkbox</type>
</CustomField>