force-app/main/default/objects/Evidence__c/fields/Drug_Chemistry__c.field-meta.xml
<CustomField>
    <fullName>Drug_Chemistry__c</fullName>
    <label>Drug Chemistry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Forensic_Analysis</valueSetName>
    </valueSet>
</CustomField>