force-app/main/default/objects/Evidence__c/fields/Duodenum_Contents__c.field-meta.xml
<CustomField>
    <fullName>Duodenum_Contents__c</fullName>
    <label>Duodenum Contents</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>