force-app/main/default/objects/Evidence__c/fields/Entomology__c.field-meta.xml
<CustomField>
    <fullName>Entomology__c</fullName>
    <label>Entomology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Disposed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>