force-app/main/default/objects/Evidence__c/fields/Esophagus__c.field-meta.xml
<CustomField>
    <fullName>Esophagus__c</fullName>
    <defaultValue>&apos;The diameter of the lumen is uniform throughout. There is no evidence of erythema, contusions, lesions, or food particulates in the lumen. Serosal and mucosal surface are smooth and shiny. &apos;</defaultValue>
    <label>Esophagus</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>