force-app/main/default/objects/Evidence__c/fields/Esophagus_Contents__c.field-meta.xml
<CustomField>
    <fullName>Esophagus_Contents__c</fullName>
    <label>Esophagus Contents</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>