force-app/main/default/objects/Evidence__c/fields/Estimated_Post_Mortem_Interval__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Post_Mortem_Interval__c</fullName>
    <inlineHelpText>Indicate if estimated</inlineHelpText>
    <label>Estimated Post Mortem Interval</label>
    <length>255</length>
    <type>Text</type>
</CustomField>