force-app/main/default/objects/Evidence__c/fields/Evidence_Category__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Category__c</fullName>
    <label>Evidence Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Biological</fullName>
            </value>
            <value>
                <fullName>Botany</fullName>
            </value>
            <value>
                <fullName>Deceased Remains</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Entomology</fullName>
            </value>
            <value>
                <fullName>Weapons</fullName>
            </value>
            <value>
                <fullName>Impression</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Fighting Paraphernalia</fullName>
            </value>
            <value>
                <fullName>Toxicology</fullName>
            </value>
            <value>
                <fullName>Trace</fullName>
            </value>
            <value>
                <fullName>Medication/Supplements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>