force-app/main/default/objects/Evidence__c/fields/Evidence_Description2__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Description2__c</fullName>
    <label>Evidence Description2</label>
    <type>TextArea</type>
</CustomField>