force-app/main/default/objects/Evidence__c/fields/Evidence_Description__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Description__c</fullName>
    <description>Evidence Description</description>
    <label>Evidence Description</label>
    <type>TextArea</type>
</CustomField>