force-app/main/default/objects/Evidence__c/fields/Evidence_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Identifier__c</fullName>
    <formula>Case__r.CaseNumber &amp;&quot;-&quot;&amp;   Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evidence Identifier</label>
    <type>Text</type>
</CustomField>