force-app/main/default/objects/Evidence__c/fields/Evidence_Type__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Type__c</fullName>
    <label>Evidence Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Evidence_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Liquid</fullName>
            </value>
            <value>
                <fullName>Stain</fullName>
            </value>
            <value>
                <fullName>Swab</fullName>
            </value>
            <value>
                <fullName>Tissue</fullName>
            </value>
            <value>
                <fullName>Scrapings</fullName>
            </value>
            <value>
                <fullName>Flower</fullName>
            </value>
            <value>
                <fullName>Leaf</fullName>
            </value>
            <value>
                <fullName>Root</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Stem</fullName>
            </value>
            <value>
                <fullName>Fleshed</fullName>
            </value>
            <value>
                <fullName>Skeletal</fullName>
            </value>
            <value>
                <fullName>Camera</fullName>
            </value>
            <value>
                <fullName>Cell Phone</fullName>
            </value>
            <value>
                <fullName>Computer/Tablet</fullName>
            </value>
            <value>
                <fullName>Memory Card</fullName>
            </value>
            <value>
                <fullName>Video/DVD</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Veterinary Medical</fullName>
            </value>
            <value>
                <fullName>Animal Care and Husbandry</fullName>
            </value>
            <value>
                <fullName>Breed Registrations</fullName>
            </value>
            <value>
                <fullName>Photographs</fullName>
            </value>
            <value>
                <fullName>Live Sample</fullName>
            </value>
            <value>
                <fullName>Preserved Sample</fullName>
            </value>
            <value>
                <fullName>Sharp Force Implement</fullName>
            </value>
            <value>
                <fullName>Blunt Force Implement</fullName>
            </value>
            <value>
                <fullName>Bite Mark</fullName>
            </value>
            <value>
                <fullName>Fingerprint</fullName>
            </value>
            <value>
                <fullName>Shoe Print</fullName>
            </value>
            <value>
                <fullName>Tool Mark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>