force-app/main/default/objects/Evidence__c/fields/EvidenceDesc__c.field-meta.xml
<CustomField>
    <fullName>EvidenceDesc__c</fullName>
    <formula>LEN(Other_Details__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EvidenceDesc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>