force-app/main/default/objects/Evidence__c/fields/External_Case__c.field-meta.xml
<CustomField>
    <fullName>External_Case__c</fullName>
    <label>External Case #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>