force-app/main/default/objects/Evidence__c/fields/Eyes_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Eyes_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eyes Finalized</label>
    <type>Checkbox</type>
</CustomField>