force-app/main/default/objects/Evidence__c/fields/Great_Vessels_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Great_Vessels_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Great Vessels Finalized</label>
    <type>Checkbox</type>
</CustomField>