force-app/main/default/objects/Evidence__c/fields/Heart_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Heart_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heart Finalized</label>
    <type>Checkbox</type>
</CustomField>