force-app/main/default/objects/Evidence__c/fields/Histopathology__c.field-meta.xml
<CustomField>
    <fullName>Histopathology__c</fullName>
    <label>Histopathology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Forensic_Analysis</valueSetName>
    </valueSet>
</CustomField>