force-app/main/default/objects/Evidence__c/fields/HOLD__c.field-meta.xml
<CustomField>
    <fullName>HOLD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HOLD</label>
    <type>Checkbox</type>
</CustomField>