force-app/main/default/objects/Evidence__c/fields/Ileum_Contents__c.field-meta.xml
<CustomField>
    <fullName>Ileum_Contents__c</fullName>
    <label>Ileum Contents</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>