force-app/main/default/objects/Evidence__c/fields/Ileum_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Ileum_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ileum Finalized</label>
    <type>Checkbox</type>
</CustomField>