force-app/main/default/objects/Evidence__c/fields/Insects_Description__c.field-meta.xml
<CustomField>
    <fullName>Insects_Description__c</fullName>
    <label>Insects on Body Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>