force-app/main/default/objects/Evidence__c/fields/Insects_Puparia_Insect_Larvae_Eggs__c.field-meta.xml
<CustomField>
    <fullName>Insects_Puparia_Insect_Larvae_Eggs__c</fullName>
    <label>Insects, Puparia, Insect Larvae/Eggs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>