force-app/main/default/objects/Evidence__c/fields/Items_on_the_Body__c.field-meta.xml
<CustomField>
    <fullName>Items_on_the_Body__c</fullName>
    <inlineHelpText>Collars, harnesses, blankets</inlineHelpText>
    <label>Items on the Body</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>