force-app/main/default/objects/Evidence__c/fields/Jejunum__c.field-meta.xml
<CustomField>
    <fullName>Jejunum__c</fullName>
    <defaultValue>&apos;Mucosa intact, no palpable irregularities and the diameter of the lumen is uniform throughout. Serosal and mucosal surface are smooth and shiny with no lesions or parasites overtly appreciated.&apos;</defaultValue>
    <label>Jejunum</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>