force-app/main/default/objects/Evidence__c/fields/Jejunum_Contents__c.field-meta.xml
<CustomField>
    <fullName>Jejunum_Contents__c</fullName>
    <label>Jejunum Contents</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>