force-app/main/default/objects/Evidence__c/fields/Jejunum_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Jejunum_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jejunum Finalized</label>
    <type>Checkbox</type>
</CustomField>