force-app/main/default/objects/Evidence__c/fields/Joints_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Joints_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joints Finalized</label>
    <type>Checkbox</type>
</CustomField>