force-app/main/default/objects/Evidence__c/fields/Joints_Space__c.field-meta.xml
<CustomField>
    <fullName>Joints_Space__c</fullName>
    <defaultValue>&quot;Synovial fluid is clear, colorless to light yellow and viscous. The articular joint surface is smooth, white and shiny with no defects.&quot;</defaultValue>
    <inlineHelpText>Describe joint space that was opened</inlineHelpText>
    <label>Joints Space</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>