force-app/main/default/objects/Evidence__c/fields/Large_Intestine__c.field-meta.xml
<CustomField>
    <fullName>Large_Intestine__c</fullName>
    <defaultValue>&apos;Mucosa intact, no palpable irregularities and the diameter of the lumen is uniform throughout. Serosal and mucosal surface are smooth and shiny with no lesions or parasites overtly appreciated.&apos;</defaultValue>
    <label>Large Intestine</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>