force-app/main/default/objects/Evidence__c/fields/Large_Intestine_Contents__c.field-meta.xml
<CustomField>
    <fullName>Large_Intestine_Contents__c</fullName>
    <label>Large Intestine Contents</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>