force-app/main/default/objects/Evidence__c/fields/Large_Intestine_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Large_Intestine_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Large Intestine Finalized</label>
    <type>Checkbox</type>
</CustomField>