force-app/main/default/objects/Evidence__c/fields/Larynx__c.field-meta.xml
<CustomField>
    <fullName>Larynx__c</fullName>
    <defaultValue>&quot;No contusions or masses. The larynx palpates smooth and is symmetrical. The hyoid apparatus is intact.&quot;</defaultValue>
    <label>Larynx</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>