force-app/main/default/objects/Evidence__c/fields/Larynx_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Larynx_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Larynx Finalized</label>
    <type>Checkbox</type>
</CustomField>