force-app/main/default/objects/Evidence__c/fields/Lead_Officer_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Officer_Investigator__c</fullName>
    <label>Lead Officer/Investigator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>