force-app/main/default/objects/Evidence__c/fields/Liver__c.field-meta.xml
<CustomField>
    <fullName>Liver__c</fullName>
    <defaultValue>&apos;Palpation and serial incisions of the liver lobes reveal no masses or abnormalities. Appears subjectively appropriate in size. Serosal surface palpates smooth and is shiny, the liver lobe colors are homogeneous and unremarkable. The gallbladder is patent with no palpable or visible stones. The liver tissue sample sinks in formalin.&apos;</defaultValue>
    <label>Liver</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>